RESOLVED FIXED275220
Fix IPC logging after 277812@main
https://bugs.webkit.org/show_bug.cgi?id=275220
Summary Fix IPC logging after 277812@main
Ben Nham
Reported 2024-06-06 13:21:44 PDT
Building with IPC signposts enabled (ENABLE_CORE_IPC_SIGNPOSTS) no longer works after 277812@main because the signature of IPC::Detail::description changed.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-06-06 13:21:57 PDT
Ben Nham
Comment 2 2024-06-06 13:25:38 PDT
EWS
Comment 3 2024-06-17 09:54:08 PDT
Committed 280075@main (19e28c035228): <https://commits.webkit.org/280075@main> Reviewed commits have been landed. Closing PR #29589 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.