Fix IPC signposts after 277812@main https://bugs.webkit.org/show_bug.cgi?id=275220 rdar://129360280

Reviewed by Brent Fulgham.

Fix building with IPC signposts enabled (ENABLE_CORE_IPC_SIGNPOSTS). This broke after 277812@main
because that patch changed the signature of `IPC::Detail::description`.

Additionally, add optional logging (which can be enabled via the `WEBKIT_LOG_INCOMING_MESSAGES` env
var) for IPC messages when they are received. This is useful for debugging messages that pile up in
suspended process message queues.

* Source/WebKit/Platform/IPC/Connection.cpp:
(IPC::Connection::sendMessage):
(IPC::Connection::sendMessageWithAsyncReply):
(IPC::Connection::waitForMessage):
(IPC::Connection::sendSyncMessage):
* Source/WebKit/Platform/IPC/StreamClientConnection.h:
(IPC::StreamClientConnection::send):
(IPC::StreamClientConnection::sendWithAsyncReply):
(IPC::StreamClientConnection::sendSync):
* Source/WebKit/Platform/IPC/cocoa/ConnectionCocoa.mm:
(IPC::shouldLogIncomingMessageHandling):
(IPC::Connection::receiveSourceEventHandler):
* Source/WebKit/Scripts/webkit/messages.py:
(generate_message_names_header):
* Source/WebKit/UIProcess/AuxiliaryProcessProxy.cpp:
(WebKit::AuxiliaryProcessProxy::sendMessage):

Canonical link: https://commits.webkit.org/280075@main