Source/WebKit/Platform/IPC/cocoa/ConnectionCocoa.mm
@@ -495,6 +495,18 @@ static mach_msg_header_t* readFromMachPort(mach_port_t machPort, ReceiveBuffer& 
     return header;
 }
 
+static bool shouldLogIncomingMessageHandling()
+{
+    static dispatch_once_t once;
+    static bool shouldLog;
+
+    dispatch_once(&once, ^{
+        shouldLog = !!getenv("WEBKIT_LOG_INCOMING_MESSAGES");
+    });
+
+    return shouldLog;
+}
+
 void Connection::receiveSourceEventHandler()
 {
     ReceiveBuffer buffer;
@@ -557,6 +569,9 @@ void Connection::receiveSourceEventHandler()
         initializeSendSource();
         return;
     }
+
+    if (UNLIKELY(shouldLogIncomingMessageHandling()))
+        RELEASE_LOG(IPCMessages, "Connection::processIncomingMessage(%p) received %" PUBLIC_LOG_STRING " from port 0x%08x", this, description(decoder->messageName()).characters(), m_receivePort);
 
     processIncomingMessage(makeUniqueRefFromNonNullUniquePtr(WTFMove(decoder)));
 }
